cabal-version:       >=1.10

name:                cis552-concurrency
version:             0.1.0.0
license-file:        LICENSE
maintainer:          sweirich@cis.upenn.edu
build-type:          Simple
extra-source-files:  CHANGELOG.md


library
  exposed-modules:     Concurrency
                     , Client
                     , TransC      
  build-depends:       base >=4.14
                     , HUnit >= 1.6
                     , network >= 3.1
                     , mtl >= 2.2.2
                     , containers >= 0.6
  default-language:    Haskell2010
  ghc-options:       -Wno-unused-matches
  default-extensions:  ScopedTypeVariables
                     , TypeApplications
                     , InstanceSigs
                     , KindSignatures
                     , LambdaCase
                     , DeriveFunctor
                     , DeriveFoldable
                     , DeriveTraversable
                     , GeneralizedNewtypeDeriving
                     , TupleSections
                     , MultiParamTypeClasses
                     , FlexibleInstances
                     , FlexibleContexts
                     , UndecidableInstances
                     , NoMonomorphismRestriction
                     , NoStarIsType
